--- a/service-proxy.properties
+++ b/service-proxy.properties
@@ -1,2 +1,3 @@
 server.port=8010
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.cloud.discovery.enabled=true 
