--- a/service-proxy.properties
+++ b/service-proxy.properties
@@ -1,3 +1,2 @@
-server.port=8010
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.cloud.discovery.enabled=true 
+server.port=8888
+spring.cloud.discovery.enabled=false
